# creditlab

./: .gitignore  README.md  pyproject.toml
docs/: RESEARCH.md
scripts/: export_gallery.py
src/creditlab/: __init__.py  dashboard.py
src/creditlab/counterparty/: __init__.py  desk.py  exposure.py  limits.py  memo.py
src/creditlab/data/: edgar.py  labels.py  ratios.py  universe.py
src/creditlab/ecl/: engine.py
src/creditlab/models/: binning.py  challenger.py  merton.py  metrics.py  scorecard.py
src/creditlab/portfolio/: lgd.py  ratings.py  simulation.py  transitions.py  vasicek.py
tests/: test_binning.py  test_counterparty.py  test_edgar.py  test_labels.py  test_metrics.py  test_models.py  test_portfolio.py
